[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "destroyer-dos"
version = "1.0.0"
description = "Network stress testing framework for security research"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Destroyer-official"}
]
keywords = ["ddos", "security", "testing", "networking", "stress-test"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security",
    "Topic :: Software Development :: Testing",
]
requires-python = ">=3.8"
dependencies = [
    "aiohttp>=3.8.0",
    "numpy>=1.21.0",
    "scapy>=2.4.5",
    "cryptography>=3.4.8",
    "pyyaml>=6.0",
    "faker>=13.0.0",
    "psutil>=5.8.0",
    "colorama>=0.4.4",
    "requests>=2.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.18.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
]
ml = [
    "scikit-learn>=1.0.0",
    "tensorflow>=2.8.0",
    "torch>=1.11.0",
]

[project.urls]
Homepage = "https://github.com/Destroyer-official/Destroyer-DoS"
Repository = "https://github.com/Destroyer-official/Destroyer-DoS"
Issues = "https://github.com/Destroyer-official/Destroyer-DoS/issues"

[project.scripts]
destroyer-dos = "ddos:main"

[tool.setuptools]
packages = ["core"]
include-package-data = true

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
