[package]
name = "netstress_engine"
version = "1.0.0"
edition = "2021"
authors = ["NetStress Team"]
description = "High-performance native packet engine for NetStress"
license = "MIT"
readme = "README.md"

[lib]
name = "netstress_engine"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py38"] }
tokio = { version = "1.35", features = ["full"] }
crossbeam = "0.8"
parking_lot = "0.12"
socket2 = "0.5"
libc = "0.2"
rand = "0.8"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
bytes = "1.5"
dashmap = "5.5"
once_cell = "1.19"
sha2 = "0.10"

# Linux-specific dependencies for advanced features
[target.'cfg(target_os = "linux")'.dependencies]
io-uring = { version = "0.6", optional = true }
nix = "0.27"

# Windows-specific dependencies for IOCP and Registered I/O
[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winsock2", "ws2tcpip", "ioapiset", "minwinbase", "handleapi", "processthreadsapi", "winbase", "errhandlingapi", "sysinfoapi", "winnt"] }

# macOS-specific dependencies for kqueue
[target.'cfg(target_os = "macos")'.dependencies]
# No additional dependencies needed - kqueue is available through libc

[build-dependencies]
cc = "1.0"

[dev-dependencies]
proptest = "1.4"
tokio-test = "0.4"
criterion = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[features]
default = ["sendmmsg"]
dpdk = []
af_xdp = []
io_uring = ["dep:io-uring"]
sendmmsg = []
iocp = []
registered_io = []
kqueue = []
linux_optimized = ["sendmmsg", "io_uring"]
windows_optimized = ["iocp", "registered_io"]
macos_optimized = ["kqueue"]
